--- a/assets/scss/admin/style-admin.scss
+++ b/assets/scss/admin/style-admin.scss
@@ -7,6 +7,7 @@
 @import "_mixins.scss";
 @import "_loading.scss";
 @import "_alerts.scss";
+@import "_datepicker.scss";
 @import "_maps.scss";
 @import "_settings.scss";
 
